# youtube-kanaal

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: humaner-content-analysis.md  run-online.md  upload-commands-windows-mac.md
scripts/: bootstrap_mac.sh  bootstrap_ubuntu_online.sh  install_python_deps.sh  install_runtime_ai_deps.sh  install_windows_startup_youtube.ps1  install_xtts_docker.sh  run_scheduled_short.ps1  run_scheduled_short.sh  run_startup_youtube.ps1  setup_project.sh  youtube-kanaal.launchd.plist
tests/: conftest.py
tests/e2e/: test_cli_end_to_end.py
tests/feature/: test_make_short_feature.py
tests/unit/: test_config.py  test_doctor_service.py  test_duplicate_prevention.py  test_ffmpeg_service.py  test_instagram_service.py  test_kokoro_service.py  test_long_form.py  test_models.py  test_narration_service.py  test_online_runtime_service.py  test_paths.py  test_pexels_service.py  test_piper_service.py  test_prompts.py  test_scheduling.py  test_sound_design_service.py  test_subtitles.py  test_xtts_service.py  test_youtube_service.py
youtube_kanaal/: __init__.py  __main__.py  cli.py  config.py  db.py  exceptions.py  logging_config.py  prompts.py
youtube_kanaal/models/: __init__.py  assets.py  content.py  run.py
youtube_kanaal/pipelines/: __init__.py  long_pipeline.py  short_pipeline.py
youtube_kanaal/services/: doctor.py  ffmpeg_service.py  instagram_service.py  kokoro_service.py  narration_service.py  ollama_service.py  online_runtime_service.py  pexels_service.py  piper_service.py  sound_design_service.py  (+4 more)
(+8 files in other folders)
